# semantic-release

./: .envrc  .gitignore  .woodpecker.yml  Cargo.toml  README.html  README.org  default.nix  devshell.toml  flake.nix  project.toml  renovate.json  shell.nix
.gitea/: template
src/: main.rs
src/cli/: logger.rs  mod.rs
src/config/: mod.rs
src/git/: mod.rs
src/init/: mod.rs  project.toml
src/project/: mod.rs  toml.rs
src/projectparse/: cargo.rs  mod.rs  node.rs  pom.rs
src/semver/: mod.rs
