[package]
name = "semantic-release"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.17"
clap = {version = "3.2.25", default-features = false, features = ["std", "cargo"] }
regex = "1.8.4"
console = "0.15.7"
lazy_static = "1.4.0"
tempfile = "3.6.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.71"