[package]
name = "semantic-release"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.10", features = ["derive"] }
console = "0.15.7"
tempfile = "3.6.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.5"
serde_json = { version = "1.0.99", features = ["preserve_order"] }
color-eyre = "0.6.2"
toml_edit = { version = "0.19.11", features = ["serde"] }
